Prevent scroll when modal is visible

--- a/app/assets/styles/components/_modals.scss
+++ b/app/assets/styles/components/_modals.scss
@@ -1,3 +1,8 @@
+.ReactModal__Body--open {
+    overflow: hidden;
+    height: 100vh;
+}
+
 .ReactModal__Overlay,
 div.ReactModal__Overlay--before-close {
     background-color: rgba(#111, 0) !important;
